Name:                shady-examples
Version:             0.6.0
Cabal-Version:       >= 1.2
Synopsis:            Playing with shady
Category:            Graphics
Description:
  Examples for Shady (functional GPU programming)
  See also shady-gen, shady-graphics, shady-render, and shady-tv.
  .
  Copyright 2009,2010 by Conal Elliott; GNU AGPLv3 license (see COPYING).
Author:              Conal Elliott
Maintainer:          conal@conal.net
Homepage:            http://github.com/conal/shady-examples/
Copyright:           (c) by Conal Elliott 2009-2102
License:             OtherLicense
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Source-Repository head
    type:         git
    location:     git://github.com/conal/shady-examples.git

Executable TestImage
  hs-source-dirs:       src
  main-is:              ImageMain.hs
  other-modules:        
                        ImageExamples
  build-depends:        
                        base < 5, OpenGL, gtk, gtkglext, wl-pprint
                      , TypeCompose, vector-space, type-unary, Boolean
                      , GtkTV, GtkGLTV
                      , shady-gen, shady-graphics >= 0.6.1, shady-render, shady-tv
  ghc-options:         -Wall -O2

-- Out for now, pending Boolean-related fixes.

-- Executable TestSurface
--   hs-source-dirs:       src
--   main-is:              SurfaceMain.hs
--   other-modules:        
--                         RunUtils
--                         ImageExamples
--                         SurfaceExamples
--   build-depends:        base < 5, TypeCompose, vector-space, wl-pprint, Boolean
--                       , shady-gen, shady-render, shady-tv
--   ghc-options:         -Wall -O2

-- -prof -auto-all -caf-all

-- -fhpc
